Added some inital files

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+config.json
+!config.json.example
+
+machinery-dashboard*
+main*
+!main.go
